<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color">


    <ImageView
        android:id="@+id/IM"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_180sdp"
        android:rotationX="0"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016"
        app:srcCompat="@drawable/hmgame" />

    <Button
        android:id="@+id/bt_Easy"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:background="@drawable/press_color"
        android:padding="@dimen/_5sdp"
        android:text="@string/easy"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IM2"
        app:layout_constraintVertical_bias="0.386" />

    <Button
        android:id="@+id/bt_Normal"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/press_color"
        android:padding="@dimen/_5sdp"
        android:text="@string/normal"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IM2"
        app:layout_constraintVertical_bias="0.445" />

    <Button
        android:id="@+id/bt_Hard"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:background="@drawable/press_color"
        android:padding="@dimen/_5sdp"
        android:text="@string/hard"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IM2"
        app:layout_constraintVertical_bias="0.78" />

    <ImageView
        android:id="@+id/IM2"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_85sdp"
        android:rotationY="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/IM"
        app:layout_constraintVertical_bias="0.355"
        app:srcCompat="@drawable/man" />

    <RadioGroup
        android:id="@+id/rdG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IM2"
        app:layout_constraintVertical_bias="0.087">

        <RadioButton
            android:id="@+id/en_rdBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/FlatRed"
            android:text="@string/english"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/FlatRed" />

        <RadioButton
            android:id="@+id/ar_rdBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/FlatRed"
            android:checked="true"
            android:text="@string/arabic"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/FlatRed"

            />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>

