<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    android:layoutDirection="ltr">

    <Button
        android:id="@+id/bt_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/press_color"
        android:enabled="false"
        android:onClick="GoAHeadFun"
        android:padding="@dimen/_10sdp"
        android:text="@string/go_a_head"
        android:textStyle="bold"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessinput"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/guessinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_guess"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_drawlayout"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_350sdp"
        android:background="@drawable/draw_board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <ImageView
            android:id="@+id/tries"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_hintword"
        android:layout_width="@dimen/_84sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/header_textstyle"
        android:gravity="center"
        android:hint="@string/name"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/txt_wordtoguess"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_39sdp"
        android:background="@drawable/body_textstyle"
        android:hint="@string/guess_word"
        android:letterSpacing="0.2"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guessinput"
        app:layout_constraintEnd_toStartOf="@+id/con_drawlayout"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_hintword"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>